--- a/src/stories/components/ChecTagsField.stories.mdx
+++ b/src/stories/components/ChecTagsField.stories.mdx
@@ -1,7 +1,8 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
-import { boolean, select, text, number } from '@storybook/addon-knobs';
+import { boolean, select, text, number, array } from '@storybook/addon-knobs';
 import ChecTagsField from '../../components/ChecTagsField.vue';
+const keys = [13, 188, 9]
 
 <Meta title="Form fields/Tags field" component={ChecTagsField} />
 
@@ -22,11 +23,17 @@ import ChecTagsField from '../../components/ChecTagsField.vue';
         addOnBlur: {
           default: boolean('Add tag when input is unfocused', true),
         },
+        addOnKeys: {
+          default: array('Keys to add tags', keys)
+        },
         allowDuplicates: {
           default: boolean('Allow duplicate tags', false),
         },
         maxLength: {
           default: number('Max length of tag character', 20),
+        },
+        width: {
+          default: text('Width of tags field', '88'),
         }
       },
       template: `
@@ -34,8 +41,10 @@ import ChecTagsField from '../../components/ChecTagsField.vue';
           <ChecTagsField
             :placeholder="placeholder"
             :addOnBlur="addOnBlur"
+            :addOnKeys="addOnKeys"
             :allowDuplicates="allowDuplicates"
             :maxLength="maxLength"
+            :width="width"
           />
         </div>`
     }}
@@ -75,6 +84,7 @@ import ChecTagsField from '../../components/ChecTagsField.vue';
             :addOnBlur="addOnBlur"
             :allowDuplicates="allowDuplicates"
             :maxLength="maxLength"
+            width="96"
           />
         </div>`
     }}
