--- a/src/stories/components/ChecImageUploader.stories.mdx
+++ b/src/stories/components/ChecImageUploader.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
-import { text, number, select } from '@storybook/addon-knobs';
+import { boolean, text, number, select } from '@storybook/addon-knobs';
 import ChecImageManager from '../../components/ChecImageManager.vue';
 import ImageBlock from '@/components/ChecImageManager/ImageBlock';
 
@@ -23,6 +23,18 @@ import ImageBlock from '@/components/ChecImageManager/ImageBlock';
       data() {
         return {
           files: [
+            {
+              id: 'ast_123',
+              name: 'Big Murray',
+              thumb: 'https://www.fillmurray.com/640/640',
+              size: 12000,
+            },
+            {
+              id: 'ast_456',
+              name: 'Smol Murray',
+              thumb: 'https://www.fillmurray.com/640/480',
+              size: 7902,
+            }
           ],
         };
       },
@@ -87,15 +99,34 @@ import ImageBlock from '@/components/ChecImageManager/ImageBlock';
         error: {
           default: text('Error message', ''),
         },
+        addAdditionalOptions: {
+          default: boolean('Add more options', false),
+        },
+      },
+      data() {
+        return {
+          moreOptions: [
+            {
+              key: 'edit',
+              name: 'Edit',
+            },
+            {
+              key: 'link-variant',
+              name: 'Link to variant',
+            },
+          ],
+        };
       },
       methods: {
         handleClick: action('click'),
         handleDelete: action('delete'),
+        handleOption: action('option-clicked'),
       },
       template: `
         <ImageBlock
           class="mx-auto w-1/4 mt-2"
           :index="index"
+          :image-options="addAdditionalOptions ? moreOptions : []"
           :thumbnail="thumb"
           :loading="progress < 100"
           :progress="progress"
@@ -103,6 +134,7 @@ import ImageBlock from '@/components/ChecImageManager/ImageBlock';
           :error-message="error"
           @click="handleClick"
           @remove="handleDelete"
+          @option-selected="handleOption"
         />
       `,
     }}
