Add a line chart component

--- a/src/stories/directives/Tooltip.stories.mdx
+++ b/src/stories/directives/Tooltip.stories.mdx
@@ -1,5 +1,4 @@
-import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { action } from '@storybook/addon-actions';
+import { Meta, Preview, Story } from '@storybook/addon-docs/blocks';
 import { ChecButton } from '../../index';
 
 <Meta title="Directives/Tooltips" />
