Use a flattened set of options to validate the value of a dropdown

--- a/src/stories/components/ChecDropdown.stories.mdx
+++ b/src/stories/components/ChecDropdown.stories.mdx
@@ -272,7 +272,7 @@ Todo list
             ]},
             { value: 'bread', label: 'Bread' },
           ],
-          selected: [],
+          selected: ['chicken'],
           onClick,
         }
       },
