Fix text wrapping underneath alert icon

--- a/src/stories/components/ChecAlert.stories.mdx
+++ b/src/stories/components/ChecAlert.stories.mdx
@@ -60,7 +60,7 @@ import ChecIcon from '../../components/ChecIcon.vue';
             @close="close()"
           >
             <ChecIcon v-if="showSlotIcon" icon="chec"/>
-            Text to Alert!
+              {{ text }}
           </ChecAlert>
         </div>`
     }}
