Allow setting minimum values for a dataset in the graph for setting the lowest value for the axis

--- a/src/stories/components/ChecLineChart.stories.mdx
+++ b/src/stories/components/ChecLineChart.stories.mdx
@@ -45,6 +45,7 @@ the trend.
             },
             ...( this.twoDatasets ? [{
               label: 'Orders',
+              min: 0,
               points: new Array(7).fill().map(() => Math.floor(Math.random() * (50 - 5 + 1)) + 5),
             }] : []),
           ];
