Consider window scroll when positioning tooltips on graph points

--- a/src/stories/components/ChecLineChart.stories.mdx
+++ b/src/stories/components/ChecLineChart.stories.mdx
@@ -71,6 +71,8 @@ the trend.
           <div class="mt-12">
             <ChecButton class="mx-auto" @click="createDatasets">Generate new points</ChecButton>
           </div>
+          <!-- Room to scroll for testing -->
+          <br><br><br><br><br><br><br><br><br><br>
         </div>`,
     }}
   </Story>
