Adjust filter panel styling to match figma
Add an option to include headers in the filter panel

--- a/src/stories/components/ChecFilterBar.stories.mdx
+++ b/src/stories/components/ChecFilterBar.stories.mdx
@@ -84,6 +84,10 @@ event. The current search term is the model prop of the component.
               type: 'boolean',
             },
             {
+              name: 'A header',
+              type: 'header',
+            },
+            {
               name: 'Begins with',
               type: 'option',
               values: [{
