--- a/src/stories/components/ChecOptionsMenu.stories.mdx
+++ b/src/stories/components/ChecOptionsMenu.stories.mdx
@@ -3,6 +3,8 @@ import { action } from '@storybook/addon-actions';
 import { select } from '@storybook/addon-knobs';
 import ChecOption from '../../components/ChecOption.vue';
 import ChecOptionsMenu from '../../components/ChecOptionsMenu.vue';
+import ChecIcon from '../../components/ChecIcon.vue';
+import ChecNavIcon from '../../components/ChecNavIcon.vue';
 
 <Meta title="Components/Options menu" component={ChecOptionsMenu} />
 
@@ -51,6 +53,9 @@ import ChecOptionsMenu from '../../components/ChecOptionsMenu.vue';
             </ChecOption>
             <ChecOption @option-selected="action">
               Check for changes
+            </ChecOption>
+            <ChecOption tag="a" href="https://google.com" target="_blank">
+              Go to Google
             </ChecOption>
             <ChecOption @option-selected="action" destructive>
               Delete record
@@ -158,6 +163,50 @@ import ChecOptionsMenu from '../../components/ChecOptionsMenu.vue';
             <ChecOption :option="{ disabled: true }">
               Disabled action
             </ChecOption>
+          </ChecOptionsMenu>
+        </div>
+      </div>`
+    }}
+  </Story>
+</Preview>
+
+## With custom button content
+
+<Preview>
+  <Story name="Custom button">
+    {{
+      components: {
+        ChecOption,
+        ChecOptionsMenu,
+        ChecIcon,
+        ChecNavIcon,
+      },
+      methods: {
+        action: action('option-selected'),
+      },
+      template: `
+      <div class="p-16 flex justify-center font-lato w-full text-gray-500">
+         <div class="w-64 mt-32 relative">
+          <ChecOptionsMenu menu-placement="right-end" :open="false">
+            <ChecOption @option-selected="action">
+              Edit record
+            </ChecOption>
+            <ChecOption @option-selected="action">
+              Check for changes
+            </ChecOption>
+            <ChecOption @option-selected="action" destructive>
+              Delete record
+            </ChecOption>
+            <ChecOption :option="{ disabled: true }">
+              Disabled action
+            </ChecOption>
+            <template #button-content>
+              <div class="flex items-center min-w-sm">
+                <ChecNavIcon class="w-6 mr-2" icon="account" />
+                <span class="flex-grow">User name</span>
+                <ChecIcon size="sm" icon="right" class="ml-2" />
+              </div>
+            </template>
           </ChecOptionsMenu>
         </div>
       </div>`
