remove blur detection handler, add tag on outside click when addOnBlur is true

--- a/src/stories/components/ChecTagsField.stories.mdx
+++ b/src/stories/components/ChecTagsField.stories.mdx
@@ -23,7 +23,7 @@ const keys = [13, 188, 9]
           default: text('Label for the tags field', 'Add option'),
         },
         addOnBlur: {
-          default: boolean('Add tag when input is unfocused', true),
+          default: boolean('Add tag on outside click or when tags field is unfocused', true),
         },
         addOnKeys: {
           default: array('Keys to add tags', keys)
