Adding inline variant of vertical navigation

--- a/src/stories/components/ChecVerticalNavigation.stories.mdx
+++ b/src/stories/components/ChecVerticalNavigation.stories.mdx
@@ -22,9 +22,17 @@ in the parent navigation component.
         ChecVerticalNavigation,
         ChecVerticalNavItem,
       },
+      props: {
+        showInline: {
+          default: boolean('Show Inline Version', false),
+        },
+      },
       template: `
       <div class="py-16 flex bg-gray-200 justify-center">
-        <ChecVerticalNavigation class="w-56">
+        <ChecVerticalNavigation
+          class="w-56"
+          :inline="showInline"
+        >
           <ChecVerticalNavItem to="#first">Hi I'm first</ChecVerticalNavItem>
           <ChecVerticalNavItem to="#second">Hi I'm second</ChecVerticalNavItem>
           <ChecVerticalNavItem to="#third">Hi I'm third</ChecVerticalNavItem>
